<resources>
    <string name="app_name">DalQuest</string>
    <string name="header"></string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <!--********Strings used for Register Page **************-->
    <string name="userRegDefault">  Username</string>
    <string name="userRegErr">  Enter a username between 3 and 40 characters.</string>
    <string name="emailRegDefault">  Email</string>
    <string name="emailRegError">  Enter a valid email address.</string>
    <string name="passwordRegDefault">  Password</string>
...
    <string name="email_reset_instructions">Reset email instructions sent to </string>
    <string name="email_does_not_exist">Does Not Exist</string>

    <!--end login strings *****************-->

    <!--***********Strings for navbar**********-->
    <string name="favorites">Favorites</string>
    <string name="schedule">My Schedule</string>
    <string name="services">Dal Services</string>
    <string name="title_activity_maps">Map</string>
    <string name="locationSearchPrompt">Enter a location</string>
    <string name="main_searchButton">Search!</string>
    <string name="main_LocatioButton">My Location</string>
...
    <string name="mapsactivity_loaction_services_notactive">Location Services Not Active</string>
    <string name="mapsactivity_gps_location_not_active">Please enable Location Services and GPS</string>
    <!--*********End MapsActivirt strings******-->

    <!--**************Strings for Favorites Dialog Box *******-->
    <string name="fav_addPrompt">Add location to Favorites</string>
    <string name="fav_addPos">Add to Favorites</string>
    <string name="fav_addNeg">Cancel</string>
    <string name="fav_nickname">Enter a nickname</string>
    <string name="fav_modPrompt">Favorite</string>
    <string name="fav_modPos">Navigate</string>
    <string name="fav_modNeg">Remove</string>
    <string name="fav_modNeut">Cancel</string>
    <string name="fav_modFail">That didn't work</string>
    <string name="profile_userNameHint">Username</string>
    <string name="profile_favColorHint">Favorite color (6 digits)</string>
    <string name="profile_updateButtonPrompt">Update Data</string>
    <string name="profile_updatePasswordPrompt">Update Password</string>
    <string name="register_usernamePrompt">Enter a username (optional)</string>
    <string name="register_favoriteColorPrompt">What\'s your favorite color? (optional)</string>
    <string name="nav_profilePrompt">Profile</string>
    <string name="changePass_oldPassPrompt">Enter old password</string>
    <string name="changePass_newPassPrompt">Enter new password</string>
    <string name="changePass_confirmPassPrompt">Confirm new password</string>
    <string name="changePass_message">Change your password</string>
    <string name="changePass_pos">Update Password</string>
    <string name="title_activity_credential_new_ui">Sign in</string>
...
