...
    tools:layout_editor_absoluteY="25dp"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true" >


    <EditText
        android:id="@+id/editText_psw"

        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginBottom="27dp"

        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />

    <EditText
        android:id="@+id/editText_name"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
...
        android:layout_marginBottom="3dp"
        android:alpha="0.80"
        android:background="#707372"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_regs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_psw" />

    <Button
...
        android:layout_marginBottom="77dp"
        android:alpha="0.80"
        android:background="#707372"
        android:text="@string/register_button"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button_fid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <Button
...
